--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
+
     defaultConfig {
         applicationId "com.example.mijin.hue"
         minSdkVersion 22
@@ -34,17 +35,28 @@ dependencies {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:customtabs:26.0.0-alpha1'
 }
 dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.android.volley:volley:1.0.0'
 }
 
 repositories {
     maven { url "https://jitpack.io" }
 }
+
+
+repositories {
+    mavenCentral()
+}
 dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+}
+dependencies {
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
 
