--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
 dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
+
 
 repositories {
     maven { url "https://jitpack.io" }
