--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.mijin.hue">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,16 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".LoginTab.LoginTabActivity" />
         <activity android:name=".ProjectTab.ProjectTabActivity" />
         <activity android:name=".ProjectTab.Tab2.DocumentDetailActivity" />
+        <activity android:name=".FindIdActivity"/>
+        <activity android:name=".FindPwActivity"/>
+        <activity android:name=".UpdatePwActivity"/>
+        <activity android:name=".FindInformationActivity"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationName"
@@ -58,6 +64,9 @@
             android:name=".LoginTab.Tab3.NewFriendActivity"
             android:theme="@style/Theme.MyDialog"></activity>
         <activity android:name=".LoginTab.Tab1.AddProjectActivity"/>
+
+
+
     </application>
 
 </manifest>
