--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.mijin.hue"
-        minSdkVersion 22
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -62,5 +62,6 @@ dependencies {
 }
 dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.alexvasilkov:foldable-layout:1.2.1'
+    compile 'com.github.zagum:SpeechRecognitionView:1.0.2'
 }
-
