--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,11 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
     compile 'com.alexvasilkov:foldable-layout:1.2.1'
     compile 'com.github.zagum:SpeechRecognitionView:1.0.2'
+    compile 'com.prolificinteractive:material-calendarview:1.4.3'
+}
+
+dependencies {
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'com.android.support:support-v4:20.+'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 }
