--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.3.1'
+
 }
 
 
@@ -71,4 +72,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.android.support:support-v4:20.+'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.github.florent37:diagonallayout:1.0.7'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
