--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
 
     <application
         android:allowBackup="true"
@@ -98,7 +101,8 @@
         <activity
             android:name=".LoginTab.Tab3.NewFriendActivity"
             android:theme="@style/Theme.MyDialog"></activity>
-        <activity android:name=".LoginTab.Tab1.AddProjectActivity"/>
+        <activity android:name=".LoginTab.Tab1.AddProjectActivity"
+                    android:theme="@style/Theme.MyDialog"/>
         <activity
             android:name=".LoginTab.Tab1.ModifyProjectActivity"
             android:theme="@style/Theme.MyDialog"></activity>
@@ -111,6 +115,14 @@
         <activity
             android:name=".ProjectTab.Tab3.EditTodoActivity"
             android:theme="@style/Theme.MyDialog"></activity>
+
+        <activity android:name=".AddProjectAllActivity">
+
+        </activity>
+
+        <receiver android:name=".BroadcastD">
+
+        </receiver>
 
     </application>
 
